--- a/app/views/homepages/index.html.erb
+++ b/app/views/homepages/index.html.erb
@@ -1,5 +1,8 @@
+
 <div class="container">
-  <h1 class="my-4"><strong>Welcome to pEtsy, your home for 90's pets! </strong></h1>
+  <br>
+  <h1 class="welcome"><strong class = "welcome">Welcome to pEtsy, your home for 90's pets! </strong></h1>
+<br><br><br>
   <div class="row">
 <!--    <div class="list-group-homepage">-->
 <!--      <div class="list-group">-->
@@ -22,7 +25,7 @@
 
 </div>
     <div>
-      <h2> <span class="spotlight-name">Pet of the day:<span style="color:black;"> Churro</span></span></h2>
+      <h2> <span class="spotlight-name">Pet of the day:<span style="color:black;"><strong> Churro</strong> </span></span></h2>
       <%= image_tag @churro, class: 'churro_image'%>
     <span class = "churro-bio">At pEtsy, we believe that every animal deserves a forever home.
        Starting this week, 5% of sales generated will be given to local animal shelters across the state of Washington.
