Added social media icons to footer Added spacing to homepage title for better presentation Added border to homepage pictures to match products page Added more pics of Churro

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10334,6 +10334,15 @@ label {
   color: #CC490C;
 }
 
+.spotlight-padding {
+  padding-left: 35px;
+}
+
+.spotlight-other{
+  color: #CC490C;
+  padding-left: 35px;
+}
+
 .list-group-homepage {
   margin-bottom: 30px;
 }
