--- a/app/views/merchants/index.html.erb
+++ b/app/views/merchants/index.html.erb
@@ -1,5 +1,5 @@
 <section class="merchant_list">
-  <h2>Check out these fine stores...</h2>
+  <h2 class = "spotlight-other"><strong>Check out these fine stores...</strong></h2>
 <% @merchants.each do |merchant| %>
   <section class="merchant_item">
   <ul>
