--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,6 +1,6 @@
 <!-- User section -->
 <section>
-<h1>Your Past Orders</h1>
+  <h2 class = "spotlight-other"><strong>Your Past Orders:</strong></h2>
 <% if @orders.empty? %>
   <h1>You have no orders!</h1>
 <% else %>
