--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,4 +1,4 @@
-<h1> Product Details </h1>
+<h2 class = "spotlight-other"><strong>Product Details</strong></h2>
 <ul>
 <li> Product name: <%= @product.name %> </li>
   <li> Description: <%= @product.description %> </li>
