--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -1,8 +1,8 @@
 <!-- User section -->
-<section>
-  <h2 class = "spotlight-other"><strong>Your Past Orders:</strong></h2>
+<section class= "spotlight-other-3"> 
+  <h1><strong>Your Past Orders:</strong></h1>
 <% if @orders.empty? %>
-  <h1>You have no orders!</h1>
+  <h2 class = "order-text">You have no orders!</h2>
 <% else %>
   <ul>
   <% @orders.each do |order| %>
